// Produced by Acceleo JavaScript Generator 1.1.0
import "ccsds_mal/types.proto";
import "pusGroundModel/PusElement.proto";


package pusGroundModel.protobuf;

message Pus015Packet {
extensions 8 to 108;

  optional ccsds_mal.protobuf.UINTEGER apid = 1;
  optional ccsds_mal.protobuf.UINTEGER serviceTpe = 2;
  optional ccsds_mal.protobuf.UINTEGER serviceSubType = 3;
  optional ccsds_mal.protobuf.UINTEGER sid = 4;
  optional ccsds_mal.protobuf.UINTEGER subsamplingRatio = 5;
  optional pusGroundModel.protobuf.PusElement pusElement = 6;
  optional ccsds_mal.protobuf.UINTEGER packetType = 7;
}
